--- a/index.html
+++ b/index.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
-<html data-theme="light" lang="en">
+<html data-theme="lofi" lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Interactive Geometry Genius</title>
     <link href="https://cdn.jsdelivr.net/npm/daisyui@2.50.1/dist/full.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
-    <title>Interactive Geometry Genius</title>
 </head>
 
-<body class="lg:mx-12">
+<body class="w-11/12 mx-auto">
     <header>
-        <!-- navbar -->
         <nav>
             <div class="navbar bg-base-100 bg-sky-200 lg:my-10 px-8">
                 <div class="navbar-start">
@@ -29,8 +28,9 @@
         </nav>
     </header>
 
-    <!-- JS CDN -->
-    <script src="./utilities.js"></script>
+    <main>
+    </main>
+
 </body>
 
 </html>
