--- a/index.html
+++ b/index.html
@@ -29,6 +29,149 @@
     </header>
 
     <main>
+        <section>
+            <div class="lg:flex gap-2">
+                <div>
+                    <div class="card grid md:grid-cols-3 grid-cols-1 w-full gap-4 mb-6 ">
+                        <!-- card 1 -->
+                        <div class="card w-full lg:w-72 xl:w-96 bg-base-100 shadow-xl mb-6">
+                            <figure class="py-8">
+                                <img src="./images/triangle.png" alt="" class="p-5" />
+                            </figure>
+                            <div class="card-body">
+                                <h2 class="text-2xl font-bold text-center my-2">Rectangle</h2>
+                                <p class="text-center">Area (A) = 0.5 &times w &times l</p>
+                                <div class="flex items-center gap-2 my-4">
+                                    <input type="text" placeholder="w"
+                                        class="input input-bordered input-primary text-black bg-zinc-100 border-inherit w-3/12 max-h-8" />
+                                    <p>cm</p>
+                                    <input type="text" placeholder="l"
+                                        class="input input-bordered input-primary text-black bg-zinc-100 border-inherit w-3/12 max-h-8" />
+                                    <p>cm</p>
+                                </div>
+                                <div class="text-center">
+                                    <button
+                                        class="btn btn-wide text-white bg-cyan-600 hover:bg-cyan-700 w-full my-3 px-10 rounded-md">Calculation</button>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- card 2 -->
+                        <div class="card w-full lg:w-72 xl:w-96 bg-base-100 shadow-xl mb-6">
+                            <figure class="py-8">
+                                <img src="./images/rectangle.png" alt="" class="p-5" />
+                            </figure>
+                            <div class="card-body">
+                                <h2 class="text-2xl font-bold text-center my-2">Triangle</h2>
+                                <p class="text-center">Area (A) = 0.5 &times b &times h</p>
+                                <div class="flex items-center gap-2 my-4">
+                                    <input type="text" placeholder="b"
+                                        class="input input-bordered input-primary text-black bg-zinc-100 border-inherit w-3/12 max-h-8" />
+                                    <p>cm</p>
+                                    <input type="text" placeholder="h"
+                                        class="input input-bordered input-primary text-black bg-zinc-100 border-inherit w-3/12 max-h-8" />
+                                    <p>cm</p>
+                                </div>
+                                <div class="text-center">
+                                    <button
+                                        class="btn btn-wide text-white bg-cyan-600 hover:bg-cyan-700 w-full my-3 px-10 rounded-md">Calculation</button>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- card 3 -->
+                        <div class="card w-full lg:w-72 xl:w-96 bg-base-100 shadow-xl mb-6">
+                            <figure class="py-8">
+                                <img src="./images/parallelogram.png" alt="" class="p-5" />
+                            </figure>
+                            <div class="card-body">
+                                <h2 class="text-2xl font-bold text-center my-2">Parallelogram</h2>
+                                <p class="text-center">Area (A) = b &times h</p>
+                                <div class="flex items-center gap-2 my-4">
+                                    <input type="text" placeholder="b"
+                                        class="input input-bordered input-primary text-black bg-zinc-100 border-inherit w-3/12 max-h-8" />
+                                    <p>cm</p>
+                                    <input type="text" placeholder="h"
+                                        class="input input-bordered input-primary text-black bg-zinc-100 border-inherit w-3/12 max-h-8" />
+                                    <p>cm</p>
+                                </div>
+                                <div class="text-center">
+                                    <button
+                                        class="btn btn-wide text-white bg-cyan-600 hover:bg-cyan-700 w-full my-3 px-10 rounded-md">Calculation</button>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- card 4 -->
+                        <div class="card w-full lg:w-72 xl:w-96 bg-base-100 shadow-xl mb-6">
+                            <figure class="py-8">
+                                <img src="./images/rhombus.png" alt="" class="p-5" />
+                            </figure>
+                            <div class="card-body">
+                                <h2 class="text-2xl font-bold text-center my-2">Rhombus</h2>
+                                <p class="text-center">Area (A) = 0.5 &times d<sub>1</sub> &times d<sub>2</sub></p>
+                                <div class="flex items-center gap-2 my-4">
+                                    <input type="text" placeholder="d1"
+                                        class="input input-bordered input-primary text-black bg-zinc-100 border-inherit w-3/12 max-h-8" />
+                                    <p>cm</p>
+                                    <input type="text" placeholder="d2"
+                                        class="input input-bordered input-primary text-black bg-zinc-100 border-inherit w-3/12 max-h-8" />
+                                    <p>cm</p>
+                                </div>
+                                <div class="text-center">
+                                    <button
+                                        class="btn btn-wide text-white bg-cyan-600 hover:bg-cyan-700 w-full my-3 px-10 rounded-md">Calculation</button>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- card 5 -->
+                        <div class="card w-full lg:w-72 xl:w-96 bg-base-100 shadow-xl mb-6">
+                            <figure class="py-8">
+                                <img src="./images/pentagon.png" alt="" class="p-5" />
+                            </figure>
+                            <div class="card-body">
+                                <h2 class="text-2xl font-bold text-center my-2">Pentagon</h2>
+                                <p class="text-center">Area (A) = 0.5 &times p &times b</p>
+                                <div class="flex items-center gap-2 my-4">
+                                    <input type="text" placeholder="p"
+                                        class="input input-bordered input-primary text-black bg-zinc-100 border-inherit w-3/12 max-h-8" />
+                                    <p>cm</p>
+                                    <input type="text" placeholder="b"
+                                        class="input input-bordered input-primary text-black bg-zinc-100 border-inherit w-3/12 max-h-8" />
+                                    <p>cm</p>
+                                </div>
+                                <div class="text-center">
+                                    <button
+                                        class="btn btn-wide text-white bg-cyan-600 hover:bg-cyan-700 w-full my-3 px-10 rounded-md">Calculation</button>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- card 6 -->
+                        <div class="card w-full lg:w-72 xl:w-96 bg-base-100 shadow-xl mb-6">
+                            <figure class="py-8">
+                                <img src="./images/ellipse.png" alt="" class="p-5" />
+                            </figure>
+                            <div class="card-body">
+                                <h2 class="text-2xl font-bold text-center my-2">Ellipse</h2>
+                                <p class="text-center">Area (A) = πab</p>
+                                <div class="flex items-center gap-2 my-4">
+                                    <input type="text" placeholder="a"
+                                        class="input input-bordered input-primary text-black bg-zinc-100 border-inherit w-3/12 max-h-8" />
+                                    <p>cm</p>
+                                    <input type="text" placeholder="b"
+                                        class="input input-bordered input-primary text-black bg-zinc-100 border-inherit w-3/12 max-h-8" />
+                                    <p>cm</p>
+                                </div>
+                                <div class="text-center">
+                                    <button
+                                        class="btn btn-wide text-white bg-cyan-600 hover:bg-cyan-700 w-full my-3 px-10 rounded-md">Calculation</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class=" h-100">
+                    <h1 class="text-center underline underline-offset-8 bg-cyan-200">Area Calculation</h1>
+                </div>
+            </div>
+        </section>
     </main>
 
 </body>
