--- a/index.html
+++ b/index.html
@@ -31,16 +31,38 @@
     <main>
         <section>
             <div class="lg:flex gap-2">
-                <div>
+                <div class="">
                     <div class="card grid md:grid-cols-3 grid-cols-1 w-full gap-4 mb-6 ">
                         <!-- card 1 -->
-                        <div class="card w-full lg:w-72 xl:w-96 bg-base-100 shadow-xl mb-6">
+                        <div id="card-id-one" class="card w-full lg:w-72 xl:w-96 bg-base-100 shadow-xl mb-6">
                             <figure class="py-8">
                                 <img src="./images/triangle.png" alt="" class="p-5" />
                             </figure>
                             <div class="card-body">
+                                <h2 id="problem-one-title" class="text-2xl font-bold text-center my-2">Triangle</h2>
+                                <p class="text-center">Area (A) = 0.5 &times b &times h</p>
+                                <div class="flex items-center gap-2 my-4">
+                                    <input type="text" placeholder="b" id="card-one-base"
+                                        class="input input-bordered input-primary text-black bg-zinc-100 border-inherit w-3/12 max-h-8" />
+                                    <p>cm</p>
+                                    <input type="text" placeholder="h" id="card-one-height"
+                                        class="input input-bordered input-primary text-black bg-zinc-100 border-inherit w-3/12 max-h-8" />
+                                    <p>cm</p>
+                                </div>
+                                <div class="text-center">
+                                    <button id="card-one-btn"
+                                        class="btn btn-wide text-white bg-cyan-600 hover:bg-cyan-700 w-full my-3 px-10 rounded-md">Calculation</button>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- card 2 -->
+                        <div id="card-id-two" class="card w-full lg:w-72 xl:w-96 bg-base-100 shadow-xl mb-6">
+                            <figure class="py-8">
+                                <img src="./images/rectangle.png" alt="" class="p-5" />
+                            </figure>
+                            <div class="card-body">
                                 <h2 class="text-2xl font-bold text-center my-2">Rectangle</h2>
-                                <p class="text-center">Area (A) = 0.5 &times w &times l</p>
+                                <p class="text-center">Area (A) = w &times l</p>
                                 <div class="flex items-center gap-2 my-4">
                                     <input type="text" placeholder="w"
                                         class="input input-bordered input-primary text-black bg-zinc-100 border-inherit w-3/12 max-h-8" />
@@ -55,30 +77,8 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- card 2 -->
-                        <div class="card w-full lg:w-72 xl:w-96 bg-base-100 shadow-xl mb-6">
-                            <figure class="py-8">
-                                <img src="./images/rectangle.png" alt="" class="p-5" />
-                            </figure>
-                            <div class="card-body">
-                                <h2 class="text-2xl font-bold text-center my-2">Triangle</h2>
-                                <p class="text-center">Area (A) = 0.5 &times b &times h</p>
-                                <div class="flex items-center gap-2 my-4">
-                                    <input type="text" placeholder="b"
-                                        class="input input-bordered input-primary text-black bg-zinc-100 border-inherit w-3/12 max-h-8" />
-                                    <p>cm</p>
-                                    <input type="text" placeholder="h"
-                                        class="input input-bordered input-primary text-black bg-zinc-100 border-inherit w-3/12 max-h-8" />
-                                    <p>cm</p>
-                                </div>
-                                <div class="text-center">
-                                    <button
-                                        class="btn btn-wide text-white bg-cyan-600 hover:bg-cyan-700 w-full my-3 px-10 rounded-md">Calculation</button>
-                                </div>
-                            </div>
-                        </div>
                         <!-- card 3 -->
-                        <div class="card w-full lg:w-72 xl:w-96 bg-base-100 shadow-xl mb-6">
+                        <div id="card-id-three" class="card w-full lg:w-72 xl:w-96 bg-base-100 shadow-xl mb-6">
                             <figure class="py-8">
                                 <img src="./images/parallelogram.png" alt="" class="p-5" />
                             </figure>
@@ -100,7 +100,7 @@
                             </div>
                         </div>
                         <!-- card 4 -->
-                        <div class="card w-full lg:w-72 xl:w-96 bg-base-100 shadow-xl mb-6">
+                        <div id="card-id-four" class="card w-full lg:w-72 xl:w-96 bg-base-100 shadow-xl mb-6">
                             <figure class="py-8">
                                 <img src="./images/rhombus.png" alt="" class="p-5" />
                             </figure>
@@ -122,7 +122,7 @@
                             </div>
                         </div>
                         <!-- card 5 -->
-                        <div class="card w-full lg:w-72 xl:w-96 bg-base-100 shadow-xl mb-6">
+                        <div id="card-id-five" class="card w-full lg:w-72 xl:w-96 bg-base-100 shadow-xl mb-6">
                             <figure class="py-8">
                                 <img src="./images/pentagon.png" alt="" class="p-5" />
                             </figure>
@@ -144,7 +144,7 @@
                             </div>
                         </div>
                         <!-- card 6 -->
-                        <div class="card w-full lg:w-72 xl:w-96 bg-base-100 shadow-xl mb-6">
+                        <div id="card-id-six" class="card w-full lg:w-72 xl:w-96 bg-base-100 shadow-xl mb-6">
                             <figure class="py-8">
                                 <img src="./images/ellipse.png" alt="" class="p-5" />
                             </figure>
@@ -167,13 +167,20 @@
                         </div>
                     </div>
                 </div>
-                <div class=" h-100">
-                    <h1 class="text-center underline underline-offset-8 bg-cyan-200">Area Calculation</h1>
+                <div class="h-100 bg-cyan-700 mt-5 w-[25%]">
+                    <h1 class="text-center underline underline-offset-8">Area Calculation</h1>
+                    <table>
+                        <tbody id="table-container">
+
+                        </tbody>
+                    </table>
                 </div>
             </div>
-        </section>
+        </section> 
     </main>
 
+    <script src="./utilities.js"></script>
+    <script src="./app.js"></script>
 </body>
 
 </html>
