--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <main>
         <section>
             <div class="lg:flex gap-2">
-                <div class="">
+                <div class="gap-2">
                     <div class="card grid md:grid-cols-3 grid-cols-1 w-full gap-4 mb-6 ">
                         <!-- card 1 -->
                         <div id="card-id-one" class="card w-full lg:w-72 xl:w-96 bg-base-100 shadow-xl mb-6">
@@ -61,18 +61,18 @@
                                 <img src="./images/rectangle.png" alt="" class="p-5" />
                             </figure>
                             <div class="card-body">
-                                <h2 class="text-2xl font-bold text-center my-2">Rectangle</h2>
+                                <h2 id="problem-two-title" class="text-2xl font-bold text-center my-2">Rectangle</h2>
                                 <p class="text-center">Area (A) = w &times l</p>
                                 <div class="flex items-center gap-2 my-4">
-                                    <input type="text" placeholder="w"
+                                    <input type="text" placeholder="w" id="card-two-base"
                                         class="input input-bordered input-primary text-black bg-zinc-100 border-inherit w-3/12 max-h-8" />
                                     <p>cm</p>
-                                    <input type="text" placeholder="l"
+                                    <input type="text" placeholder="l" id="card-two-height"
                                         class="input input-bordered input-primary text-black bg-zinc-100 border-inherit w-3/12 max-h-8" />
                                     <p>cm</p>
                                 </div>
                                 <div class="text-center">
-                                    <button
+                                    <button id="card-two-btn"
                                         class="btn btn-wide text-white bg-cyan-600 hover:bg-cyan-700 w-full my-3 px-10 rounded-md">Calculation</button>
                                 </div>
                             </div>
@@ -167,16 +167,16 @@
                         </div>
                     </div>
                 </div>
-                <div class="h-100 bg-cyan-700 mt-5 w-[25%]">
-                    <h1 class="text-center underline underline-offset-8">Area Calculation</h1>
-                    <table>
-                        <tbody id="table-container">
+                <div class="lg:w-[25%] w-full border h-[100vh]">
+                    <h1 class="text-3xl text-center underline underline-offset-8 mt-5">Area Calculation</h1>
+                    <div>
+                        <ul id="table-container" class="text-xl text-center mt-6">
 
-                        </tbody>
-                    </table>
+                        </ul>
+                    </div>
                 </div>
             </div>
-        </section> 
+        </section>
     </main>
 
     <script src="./utilities.js"></script>
