finished all button caculation

--- a/index.html
+++ b/index.html
@@ -83,18 +83,19 @@
                                 <img src="./images/parallelogram.png" alt="" class="p-5" />
                             </figure>
                             <div class="card-body">
-                                <h2 class="text-2xl font-bold text-center my-2">Parallelogram</h2>
+                                <h2 id="problem-three-title" class="text-2xl font-bold text-center my-2">Parallelogram</h2>
                                 <p class="text-center">Area (A) = b &times h</p>
+                                <p class="text-xl text-center">b=10cm, h=12cm</p>
                                 <div class="flex items-center gap-2 my-4">
-                                    <input type="text" placeholder="b"
+                                    <input type="text" placeholder="b" id="card-three-base"
                                         class="input input-bordered input-primary text-black bg-zinc-100 border-inherit w-3/12 max-h-8" />
                                     <p>cm</p>
-                                    <input type="text" placeholder="h"
+                                    <input type="text" placeholder="h" id="card-three-height"
                                         class="input input-bordered input-primary text-black bg-zinc-100 border-inherit w-3/12 max-h-8" />
                                     <p>cm</p>
                                 </div>
                                 <div class="text-center">
-                                    <button
+                                    <button id="card-three-btn"
                                         class="btn btn-wide text-white bg-cyan-600 hover:bg-cyan-700 w-full my-3 px-10 rounded-md">Calculation</button>
                                 </div>
                             </div>
@@ -105,18 +106,19 @@
                                 <img src="./images/rhombus.png" alt="" class="p-5" />
                             </figure>
                             <div class="card-body">
-                                <h2 class="text-2xl font-bold text-center my-2">Rhombus</h2>
+                                <h2 id="problem-four-title" class="text-2xl font-bold text-center my-2">Rhombus</h2>
                                 <p class="text-center">Area (A) = 0.5 &times d<sub>1</sub> &times d<sub>2</sub></p>
+                                <p class="text-xl text-center">d<sub>1</sub> = 16cm, d<sub>2</sub> = 8cm</p>
                                 <div class="flex items-center gap-2 my-4">
-                                    <input type="text" placeholder="d1"
+                                    <input type="text" placeholder="d1" id="card-four-base"
                                         class="input input-bordered input-primary text-black bg-zinc-100 border-inherit w-3/12 max-h-8" />
                                     <p>cm</p>
-                                    <input type="text" placeholder="d2"
+                                    <input type="text" placeholder="d2" id="card-four-height"
                                         class="input input-bordered input-primary text-black bg-zinc-100 border-inherit w-3/12 max-h-8" />
                                     <p>cm</p>
                                 </div>
                                 <div class="text-center">
-                                    <button
+                                    <button id="card-four-btn"
                                         class="btn btn-wide text-white bg-cyan-600 hover:bg-cyan-700 w-full my-3 px-10 rounded-md">Calculation</button>
                                 </div>
                             </div>
@@ -127,18 +129,18 @@
                                 <img src="./images/pentagon.png" alt="" class="p-5" />
                             </figure>
                             <div class="card-body">
-                                <h2 class="text-2xl font-bold text-center my-2">Pentagon</h2>
+                                <h2 id="problem-fifth-title" class="text-2xl font-bold text-center my-2">Pentagon</h2>
                                 <p class="text-center">Area (A) = 0.5 &times p &times b</p>
                                 <div class="flex items-center gap-2 my-4">
-                                    <input type="text" placeholder="p"
+                                    <input type="text" placeholder="p" id="card-fifth-base"
                                         class="input input-bordered input-primary text-black bg-zinc-100 border-inherit w-3/12 max-h-8" />
                                     <p>cm</p>
-                                    <input type="text" placeholder="b"
+                                    <input type="text" placeholder="b" id="card-fifth-height"
                                         class="input input-bordered input-primary text-black bg-zinc-100 border-inherit w-3/12 max-h-8" />
                                     <p>cm</p>
                                 </div>
                                 <div class="text-center">
-                                    <button
+                                    <button id="card-fifth-btn"
                                         class="btn btn-wide text-white bg-cyan-600 hover:bg-cyan-700 w-full my-3 px-10 rounded-md">Calculation</button>
                                 </div>
                             </div>
@@ -149,18 +151,18 @@
                                 <img src="./images/ellipse.png" alt="" class="p-5" />
                             </figure>
                             <div class="card-body">
-                                <h2 class="text-2xl font-bold text-center my-2">Ellipse</h2>
+                                <h2 id="problem-six-title" class="text-2xl font-bold text-center my-2">Ellipse</h2>
                                 <p class="text-center">Area (A) = πab</p>
                                 <div class="flex items-center gap-2 my-4">
-                                    <input type="text" placeholder="a"
+                                    <input type="text" placeholder="a" id="card-six-base"
                                         class="input input-bordered input-primary text-black bg-zinc-100 border-inherit w-3/12 max-h-8" />
                                     <p>cm</p>
-                                    <input type="text" placeholder="b"
+                                    <input type="text" placeholder="b" id="card-six-height"
                                         class="input input-bordered input-primary text-black bg-zinc-100 border-inherit w-3/12 max-h-8" />
                                     <p>cm</p>
                                 </div>
                                 <div class="text-center">
-                                    <button
+                                    <button id="card-six-btn"
                                         class="btn btn-wide text-white bg-cyan-600 hover:bg-cyan-700 w-full my-3 px-10 rounded-md">Calculation</button>
                                 </div>
                             </div>
