fixed area calculation

--- a/blog.html
+++ b/blog.html
@@ -7,10 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- ---------- tailwind CDN---------- -->
     <script src="https://cdn.tailwindcss.com"></script>
-    <title> Blog</title>
+    <title>Blog</title>
 </head>
 
-<body class="bg-sky-200 p-10">
+<body class="bg-sky-200 w-screen p-10">
     <header>
         <h1 class="text-center text-5xl font-bold"><span class="text-orange-600">Q&A</span> about <span class="text-green-500">JavaScript</span></h1>
     </header>
