--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
 
     <main>
         <section>
-            <div class="lg:flex gap-2">
+            <div class="lg:flex w-full gap-2">
                 <div class="gap-2">
                     <div class="card grid md:grid-cols-3 grid-cols-1 w-full gap-4 mb-6 ">
                         <!-- card 1 -->
-                        <div id="card-id-one" class="card w-full lg:w-72 xl:w-96 bg-base-100 shadow-xl mb-6">
+                        <div id="card-id-one" class="card bg-base-100 shadow-xl mb-6">
                             <figure class="py-8">
                                 <img src="./images/triangle.png" alt="" class="p-5" />
                             </figure>
@@ -57,7 +57,7 @@
                             </div>
                         </div>
                         <!-- card 2 -->
-                        <div id="card-id-two" class="card w-full lg:w-72 xl:w-96 bg-base-100 shadow-xl mb-6">
+                        <div id="card-id-two" class="card bg-base-100 shadow-xl mb-6">
                             <figure class="py-8">
                                 <img src="./images/rectangle.png" alt="" class="p-5" />
                             </figure>
@@ -79,7 +79,7 @@
                             </div>
                         </div>
                         <!-- card 3 -->
-                        <div id="card-id-three" class="card w-full lg:w-72 xl:w-96 bg-base-100 shadow-xl mb-6">
+                        <div id="card-id-three" class="card bg-base-100 shadow-xl mb-6">
                             <figure class="py-8">
                                 <img src="./images/parallelogram.png" alt="" class="p-5" />
                             </figure>
@@ -102,7 +102,7 @@
                             </div>
                         </div>
                         <!-- card 4 -->
-                        <div id="card-id-four" class="card w-full lg:w-72 xl:w-96 bg-base-100 shadow-xl mb-6">
+                        <div id="card-id-four" class="card bg-base-100 shadow-xl mb-6">
                             <figure class="py-8">
                                 <img src="./images/rhombus.png" alt="" class="p-5" />
                             </figure>
@@ -125,7 +125,7 @@
                             </div>
                         </div>
                         <!-- card 5 -->
-                        <div id="card-id-five" class="card w-full lg:w-72 xl:w-96 bg-base-100 shadow-xl mb-6">
+                        <div id="card-id-five" class="card bg-base-100 shadow-xl mb-6">
                             <figure class="py-8">
                                 <img src="./images/pentagon.png" alt="" class="p-5" />
                             </figure>
@@ -147,7 +147,7 @@
                             </div>
                         </div>
                         <!-- card 6 -->
-                        <div id="card-id-six" class="card w-full lg:w-72 xl:w-96 bg-base-100 shadow-xl mb-6">
+                        <div id="card-id-six" class="card bg-base-100 shadow-xl mb-6">
                             <figure class="py-8">
                                 <img src="./images/ellipse.png" alt="" class="p-5" />
                             </figure>
@@ -170,7 +170,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="lg:w-[25%] w-full border h-[100vh]">
+                <div class="lg:w-[35%] w-full border h-[100vh]">
                     <h1 class="text-3xl text-center underline underline-offset-8 mt-5">Area Calculation</h1>
                     <div>
                         <ul id="table-container" class="text-xl text-center mt-6"></ul>
