--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body class="w-11/12 mx-auto">
     <header>
         <nav>
-            <div class="navbar bg-base-100 bg-sky-200 lg:my-10 px-8 py-10">
+            <div class="navbar bg-base-100 bg-sky-200 lg:my-10 lg:px-8 py-10">
                 <div class="navbar-start">
                     <h1>
                         <span class="text-3xl font-semibold text-black">Interactive</span>
@@ -23,17 +23,16 @@
                     </h1>
                 </div>
                 <div class="navbar-end">
-                    <a id="blog-btn" class="btn normal-case text-xl bg-sky-500 hover:bg-sky-700 border-sky-700 px-12">Blog</a>
+                    <a id="blog-btn" class="btn normal-case text-xl bg-sky-500 hover:bg-sky-700 border-sky-700 px-10">Blog</a>
                 </div>
             </div>
         </nav>
     </header>
-
     <main>
         <section>
-            <div class="lg:flex w-full gap-2">
-                <div class="gap-2">
-                    <div class="card grid md:grid-cols-3 grid-cols-1 w-full gap-4 mb-6 ">
+            <div class="lg:flex gap-2">
+                <div class="gap-1">
+                    <div class="card grid md:grid-cols-3 grid-cols-1 gap-4 mb-6">
                         <!-- card 1 -->
                         <div id="card-id-one" class="card bg-base-100 shadow-xl mb-6">
                             <figure class="py-8">
@@ -59,7 +58,7 @@
                         <!-- card 2 -->
                         <div id="card-id-two" class="card bg-base-100 shadow-xl mb-6">
                             <figure class="py-8">
-                                <img src="./images/rectangle.png" alt="" class="p-5" />
+                                <img src="./images/rectangle.png" alt="" class="mt-8 p-5" />
                             </figure>
                             <div class="card-body">
                                 <h2 id="problem-two-title" class="text-2xl font-bold text-center my-2">Rectangle</h2>
@@ -81,7 +80,7 @@
                         <!-- card 3 -->
                         <div id="card-id-three" class="card bg-base-100 shadow-xl mb-6">
                             <figure class="py-8">
-                                <img src="./images/parallelogram.png" alt="" class="p-5" />
+                                <img src="./images/parallelogram.png" alt="" class="mt-12 p-5" />
                             </figure>
                             <div class="card-body">
                                 <h2 id="problem-three-title" class="text-2xl font-bold text-center my-2">Parallelogram</h2>
@@ -149,11 +148,10 @@
                         <!-- card 6 -->
                         <div id="card-id-six" class="card bg-base-100 shadow-xl mb-6">
                             <figure class="py-8">
-                                <img src="./images/ellipse.png" alt="" class="p-5" />
+                                <img src="./images/ellipse.png" alt="" class="mt-8 p-5" />
                             </figure>
                             <div class="card-body">
-                                <h2 id="problem-six-title" class="text-2xl font-bold text-center my-2">Ellipse</h2>
-                                <p class="text-center">Area (A) = πab</p>
+                                <h2 id="problem-six-title" class="text-2xl font-bold text-center my-2">Ellipse</h2> <p class="text-center">Area (A) = πab</p>
                                 <div class="flex items-center gap-2 my-4">
                                     <input type="text" placeholder="a" id="card-six-base"
                                         class="input input-bordered input-primary text-black bg-zinc-100 border-inherit w-3/12 max-h-8" />
@@ -170,10 +168,10 @@
                         </div>
                     </div>
                 </div>
-                <div class="lg:w-[35%] w-full border h-[100vh]">
+                <div class="lg:w-[45%] w-full border h-[100vh]">
                     <h1 class="text-3xl text-center underline underline-offset-8 mt-5">Area Calculation</h1>
                     <div>
-                        <ul id="table-container" class="text-xl text-center mt-6"></ul>
+                        <ul id="table-container" class="text-center mt-6"></ul>
                     </div>
                 </div>
             </div>
