final design of card section

--- a/index.html
+++ b/index.html
@@ -36,17 +36,17 @@
                         <!-- card 1 -->
                         <div id="card-id-one" class="card bg-base-100 shadow-xl mb-6">
                             <figure class="py-8">
-                                <img src="./images/triangle.png" alt="" class="p-5" />
+                                <img src="./images/triangle.png" alt="" class="h-40 p-5" />
                             </figure>
                             <div class="card-body">
                                 <h2 id="problem-one-title" class="text-2xl font-bold text-center my-2">Triangle</h2>
                                 <p class="text-center">Area (A) = 0.5 &times b &times h</p>
-                                <div class="flex items-center gap-2 my-4">
+                                <div class="flex items-center gap-2">
                                     <input type="text" placeholder="b" id="card-one-base"
-                                        class="input input-bordered input-primary text-black bg-zinc-100 border-inherit w-3/12 max-h-8" />
+                                        class="input input-bordered input-primary text-black bg-zinc-100 border-inherit w-1/2 max-h-8" />
                                     <p>cm</p>
                                     <input type="text" placeholder="h" id="card-one-height"
-                                        class="input input-bordered input-primary text-black bg-zinc-100 border-inherit w-3/12 max-h-8" />
+                                        class="input input-bordered input-primary text-black bg-zinc-100 border-inherit w-1/2 max-h-8" />
                                     <p>cm</p>
                                 </div>
                                 <div class="text-center">
@@ -58,17 +58,17 @@
                         <!-- card 2 -->
                         <div id="card-id-two" class="card bg-base-100 shadow-xl mb-6">
                             <figure class="py-8">
-                                <img src="./images/rectangle.png" alt="" class="mt-8 p-5" />
+                                <img src="./images/rectangle.png" alt="" class="h-40 p-5" />
                             </figure>
                             <div class="card-body">
                                 <h2 id="problem-two-title" class="text-2xl font-bold text-center my-2">Rectangle</h2>
                                 <p class="text-center">Area (A) = w &times l</p>
-                                <div class="flex items-center gap-2 my-4">
+                                <div class="flex items-center gap-2">
                                     <input type="text" placeholder="w" id="card-two-base"
-                                        class="input input-bordered input-primary text-black bg-zinc-100 border-inherit w-3/12 max-h-8" />
+                                        class="input input-bordered input-primary text-black bg-zinc-100 border-inherit w-1/2 max-h-8" />
                                     <p>cm</p>
                                     <input type="text" placeholder="l" id="card-two-height"
-                                        class="input input-bordered input-primary text-black bg-zinc-100 border-inherit w-3/12 max-h-8" />
+                                        class="input input-bordered input-primary text-black bg-zinc-100 border-inherit w-1/2 max-h-8" />
                                     <p>cm</p>
                                 </div>
                                 <div class="text-center">
@@ -80,18 +80,18 @@
                         <!-- card 3 -->
                         <div id="card-id-three" class="card bg-base-100 shadow-xl mb-6">
                             <figure class="py-8">
-                                <img src="./images/parallelogram.png" alt="" class="mt-12 p-5" />
+                                <img src="./images/parallelogram.png" alt="" class="h-40 p-5" />
                             </figure>
                             <div class="card-body">
                                 <h2 id="problem-three-title" class="text-2xl font-bold text-center my-2">Parallelogram</h2>
                                 <p class="text-center">Area (A) = b &times h</p>
                                 <p class="text-xl text-center">b=10cm, h=12cm</p>
-                                <div class="flex items-center gap-2 my-4">
+                                <div class="flex items-center gap-2">
                                     <input type="text" placeholder="b" id="card-three-base"
-                                        class="input input-bordered input-primary text-black bg-zinc-100 border-inherit w-3/12 max-h-8" />
+                                        class="input input-bordered input-primary text-black bg-zinc-100 border-inherit w-1/2 max-h-8" />
                                     <p>cm</p>
                                     <input type="text" placeholder="h" id="card-three-height"
-                                        class="input input-bordered input-primary text-black bg-zinc-100 border-inherit w-3/12 max-h-8" />
+                                        class="input input-bordered input-primary text-black bg-zinc-100 border-inherit w-1/2 max-h-8" />
                                     <p>cm</p>
                                 </div>
                                 <div class="text-center">
@@ -103,18 +103,18 @@
                         <!-- card 4 -->
                         <div id="card-id-four" class="card bg-base-100 shadow-xl mb-6">
                             <figure class="py-8">
-                                <img src="./images/rhombus.png" alt="" class="p-5" />
+                                <img src="./images/rhombus.png" alt="" class="h-40 p-5" />
                             </figure>
                             <div class="card-body">
                                 <h2 id="problem-four-title" class="text-2xl font-bold text-center my-2">Rhombus</h2>
                                 <p class="text-center">Area (A) = 0.5 &times d<sub>1</sub> &times d<sub>2</sub></p>
                                 <p class="text-xl text-center">d<sub>1</sub> = 16cm, d<sub>2</sub> = 8cm</p>
-                                <div class="flex items-center gap-2 my-4">
+                                <div class="flex items-center gap-2">
                                     <input type="text" placeholder="d1" id="card-four-base"
-                                        class="input input-bordered input-primary text-black bg-zinc-100 border-inherit w-3/12 max-h-8" />
+                                        class="input input-bordered input-primary text-black bg-zinc-100 border-inherit w-1/2 max-h-8" />
                                     <p>cm</p>
                                     <input type="text" placeholder="d2" id="card-four-height"
-                                        class="input input-bordered input-primary text-black bg-zinc-100 border-inherit w-3/12 max-h-8" />
+                                        class="input input-bordered input-primary text-black bg-zinc-100 border-inherit w-1/2 max-h-8" />
                                     <p>cm</p>
                                 </div>
                                 <div class="text-center">
@@ -126,17 +126,17 @@
                         <!-- card 5 -->
                         <div id="card-id-five" class="card bg-base-100 shadow-xl mb-6">
                             <figure class="py-8">
-                                <img src="./images/pentagon.png" alt="" class="p-5" />
+                                <img src="./images/pentagon.png" alt="" class="h-40 p-5" />
                             </figure>
                             <div class="card-body">
                                 <h2 id="problem-fifth-title" class="text-2xl font-bold text-center my-2">Pentagon</h2>
                                 <p class="text-center">Area (A) = 0.5 &times p &times b</p>
                                 <div class="flex items-center gap-2 my-4">
                                     <input type="text" placeholder="p" id="card-fifth-base"
-                                        class="input input-bordered input-primary text-black bg-zinc-100 border-inherit w-3/12 max-h-8" />
+                                        class="input input-bordered input-primary text-black bg-zinc-100 border-inherit w-1/2 max-h-8" />
                                     <p>cm</p>
                                     <input type="text" placeholder="b" id="card-fifth-height"
-                                        class="input input-bordered input-primary text-black bg-zinc-100 border-inherit w-3/12 max-h-8" />
+                                        class="input input-bordered input-primary text-black bg-zinc-100 border-inherit w-1/2 max-h-8" />
                                     <p>cm</p>
                                 </div>
                                 <div class="text-center">
@@ -148,16 +148,16 @@
                         <!-- card 6 -->
                         <div id="card-id-six" class="card bg-base-100 shadow-xl mb-6">
                             <figure class="py-8">
-                                <img src="./images/ellipse.png" alt="" class="mt-8 p-5" />
+                                <img src="./images/ellipse.png" alt="" class="h-40 p-5" />
                             </figure>
                             <div class="card-body">
                                 <h2 id="problem-six-title" class="text-2xl font-bold text-center my-2">Ellipse</h2> <p class="text-center">Area (A) = πab</p>
-                                <div class="flex items-center gap-2 my-4">
+                                <div class="flex items-center gap-2">
                                     <input type="text" placeholder="a" id="card-six-base"
-                                        class="input input-bordered input-primary text-black bg-zinc-100 border-inherit w-3/12 max-h-8" />
+                                        class="input input-bordered input-primary text-black bg-zinc-100 border-inherit w-1/2 max-h-8" />
                                     <p>cm</p>
                                     <input type="text" placeholder="b" id="card-six-height"
-                                        class="input input-bordered input-primary text-black bg-zinc-100 border-inherit w-3/12 max-h-8" />
+                                        class="input input-bordered input-primary text-black bg-zinc-100 border-inherit w-1/2 max-h-8" />
                                     <p>cm</p>
                                 </div>
                                 <div class="text-center">
